# between

./: Cargo.toml  README.md
client/: bun.lockb  index.html  package.json  tsconfig.json
client/src/: global.css  index.tsx  router.tsx
client/src/api/: connection.ts
client/src/api/components/: assert-connected.tsx  connection-wrapper.tsx
client/src/dashboard/: route.tsx
client/src/dashboard/components/: request-list.tsx
client/src/ui/: hooks.ts  index.ts  variants.ts
client/src/ui/components/: badge.tsx  button.tsx  input.tsx  logo.tsx  navbar.tsx
scripts/: build.ts  bun.lockb  package.json
server/: Cargo.toml
server/src/: app.rs  client_assets.rs  main.rs  prelude.rs  state.rs
server/src/proxy/: mod.rs  websocket.rs
src/: cli.rs  main.rs  prelude.rs
src/proxy/: mod.rs  simple.rs  websocket.rs
